<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/navy"
    android:gravity="center"
    tools:context=".presentation.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <!-- Logo and Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <ImageView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:src="@drawable/gabungan_logo"
                android:layout_marginEnd="30dp"
                android:text="@string/diacare" />
        </LinearLayout>

        <!-- Subtitle -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <!-- Start the Quest Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/photo_picker_area"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="191dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/addimage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/start_quest"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/messagecard"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Horizontal Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white" />

        <!-- Feature Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:orientation="vertical">

            <!-- Camera Button -->

            <!-- News Button -->

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="@color/parent"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <!-- Rectangle background for the logo -->
                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_logo_bg">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/camera_filled" />
                    </FrameLayout>

                    <!-- Rectangle background for the text -->
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_logo_bg"
                        android:padding="13dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/camera"
                            android:textColor="@color/navy"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/news_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="@color/parent"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <!-- Rectangle background for the logo -->
                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_logo_bg">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/news_filled" />
                    </FrameLayout>

                    <!-- Rectangle background for the text -->
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_logo_bg"
                        android:padding="13dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/news"
                            android:textColor="@color/navy"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Chatbot Button -->
            <androidx.cardview.widget.CardView
                android:id="@+id/chat_bot_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="@color/parent"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <!-- Rectangle background for the logo -->
                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_logo_bg">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/chat_filled" />
                    </FrameLayout>

                    <!-- Rectangle background for the text -->
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_logo_bg"
                        android:padding="13dp">

                        <TextView
                            android:id="@+id/ChatBot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/chatbot"
                            android:textColor="@color/navy"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

